# sdk

./: CMakeLists.txt  README.md  test.sh
compiler/: README.md  bundle.ts  index.ts  package.json  tsconfig.build.json  tsconfig.json
compiler/src/: bind.ts  compiler.ts  kernel.ts  linker.ts  old_compiler.ts  old_linker.ts
compiler/src/lang/: linter.ts  semantics.ts  style.ts  syntax.ts  types.ts
compiler/test/: compiler.test.ts
compiler/util/: console.ts  shell.ts
examples/: 0-blink.cpp  1-clock.cpp  2-accumulator.cpp  blink.cpp  clock.cpp  device.h  os.h
grammar/: index.ts  quimblos.ebnf
grammar/src/: cst.ts  error.ts  node.ts  type.ts
grammar/src/nodes/: assignment.ts  declaration.ts  flow.ts  runner.ts
include/: cmd.h  data.h  device.h  runner.h  script.h
kernel/: CMakeLists.txt  README.md  build_wasm.sh  wasm.cpp
kernel/docs/: types.md
kernel/examples/: 0-blink.cpp  1-clock.cpp  2-accumulator.cpp  3-ledstrip.cpp  app.h  device.h  runner.h
kernel/examples/wasm/: index.html  quimblos.js  quimblos.wasm
kernel/include/: cmd.h  code.h  data.h  device.h  engine.h  hex.h  memory.h  operator.h  parser.h  runner.h  script.h  sdk.h  static_checker.h
kernel/src/: engine.cpp  hex.cpp  memory.cpp  operator.cpp  parser.cpp  runner.cpp  static_checker.cpp
kernel/test/: code_parser.test.h  main.cpp  memory_operators.test.h  runner.test.h  static_checker.test.h  test.h
langmaker/: bundle.ts  index.ts  package.json  tsconfig.build.json  tsconfig.json
langmaker/examples/: 0-hello-world.ts  1-linter.ts  2-style-html.ts
langmaker/src/format/: html.ts
langmaker/src/semantics/: ast.ts  semantics.ts
langmaker/src/static/: linter.ts
langmaker/src/syntax/: cst.ts  ebnf.ts
langmaker/test/: linter.test.ts  semantics.test.ts  syntax.test.ts
langmaker/util/: console.ts  string.ts
src/: engine.cpp  parser.cpp  runner.cpp
ui/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.mjs
ui/lib/: helper.ts  kernel.ts  quimblos.d.ts  quimblos.js  quimblos.wasm
ui/lib/compiler/: compiler.ts  linker.ts
ui/lib/grammar/: index.ts  linter.ts  semantics.ts  style.ts  syntax.ts  transformer.ts  types.ts
ui/lib/lang-maker/: ast.ts  cst.ts  ebnf.ts  linter.ts  semantics.ts  style.ts  transformer.ts
ui/src/: index.ts  lala.ts  my-app.goo
ui/src/components/: qb-app.wml  qb-console.goo  qb-device.wml  qb-editor.goo  qb-servo.goo  qb-water-tank.goo
ui/src/devices/: ledbar-device.goo  ledbar.device.ts  ledstrip-device.goo  ledstrip.device.ts  qb-device-water-tank.wml  sling2d-device.goo  sling2d-device.ts  sling2d.device.ts  water-tank.ts
ui/src/pages/: page-devices.goo  page-sandbox.goo  page-welcome.goo
ui/wml/: loader.mjs
